# interviewai

./: .gitignore  Dockerfile  Procfile  README.md  application.py  cloudbuild.yaml  config_template.yaml  deploy-gcp.sh  main.ps1  main.sh  poetry.md  pyproject.toml  requirements.txt
.ebextensions/: healthcheck.config  websockets.config
interviewai/: __init__.py  ai.py  auth.py  env.py  firebase.py  server.py  session.py  transcriber.py
interviewai/chains/: base_chain.py  chain_assembler.py  chain_factory.py  chain_manager.py  context.py  interview_callback.py
interviewai/config/: config.py
interviewai/db/: index.py  index_domain.py  index_material.py
interviewai/prompt/: prompt.py
interviewai/speech/: dg.py  gladia.py  load_balancer.py
interviewai/tools/: cost_calculator.py  data_structure.py  util.py
interviewai/user_manager/: clerkapi.py  credits_manager.py  email_action.py  mail.py  payment.py  user_preference.py  view.py
